--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "11.1.0",
     "react": "17.0.2",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.2",
     "sass": "^1.37.5"
   },
