--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.2",
+    "react-social-icons": "^5.5.1",
     "sass": "^1.37.5"
   },
   "devDependencies": {
