--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.2",
     "react-social-icons": "^5.5.1",
-    "sass": "^1.37.5"
+    "sass": "^1.37.5",
+    "simple-react-lightbox": "^3.6.7"
   },
   "devDependencies": {
     "eslint": "7.32.0",
